# ESPRowingMonitor

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  README.md  ble-scs-sensor.code-workspace  esp-rowing-monitor.code-workspace  makefile  platformio.ini
src/peripherals/bluetooth/: CMakeLists.txt  ble-metrics.model.h  ble.enums.h  bluetooth.controller.cpp  bluetooth.controller.h  bluetooth.controller.interface.h  bluetooth.notifications.cpp
src/peripherals/bluetooth/ble-services/: base-metrics.service.cpp  base-metrics.service.h  base-metrics.service.interface.h  battery.service.cpp  battery.service.h  battery.service.interface.h  device-info.service.cpp  device-info.service.h  device-info.service.interface.h  extended-metrics.notifications.service.cpp  extended-metrics.service.cpp  extended-metrics.service.h  extended-metrics.service.interface.h  ota.service.cpp  ota.service.h  ota.service.interface.h  settings.service.cpp  settings.service.h  settings.service.interface.h
src/peripherals/bluetooth/callbacks/: chunked-notify.callbacks.cpp  chunked-notify.callbacks.h  connection-manager.callbacks.cpp  connection-manager.callbacks.h  connection-manager.callbacks.interface.h  control-point.callbacks.cpp  control-point.callbacks.h  ota.callbacks.cpp  ota.callbacks.h  server.callbacks.cpp  server.callbacks.h  server.callbacks.interface.h  subscription-manager.callbacks.cpp  subscription-manager.callbacks.h
src/utils/series/: CMakeLists.txt  cyclic-error-filter.cpp  cyclic-error-filter.h  exponential-weighted-average.cpp  ols-linear-series.cpp  ols-linear-series.h  series.cpp  series.h  ts-linear-series.cpp  ts-linear-series.h  ts-quadratic-series.cpp  ts-quadratic-series.h  weighted-average-series.cpp  weighted-average-series.h
test/: Arduino.h  ArduinoLog.h  CMakeLists.txt  Esp32-typedefs.h  FastLED.h  NimBLEDevice.h  Preferences.h  globals.cpp  globals.h  main.cpp  test.array.cpp  test.array.h
test/calibration/: CMakeLists.txt
test/calibration/Generic/: damper-bug-54-test.txt  interval-real-596-test.txt  pyramid-real-592-test.txt  run-test.bat  steady-20231223-517-test.txt  steady-real-635-test.txt  steady2.0-real-730-test.txt
test/calibration/KayakFirst/: closed-mixed-119-test.txt  closed-mixed.txt  closed-slow.txt  interval-(5'+30''+30'')x3-2101-231123-test.txt  interval-200_2000_200-3292-test.txt  open-fast-50-test.txt  open-fast.txt  open-mixed-50-test.txt  open-mixed.txt  open-slow-50-test.txt  run-test.bat  steady-kayak-2316-181123-test.txt
test/calibration/KayakFirstBlue/: 4x500-20231231-1773-test.txt  closed-mixed-119-test.txt  closed-slow-100-test.txt  closed-slow-60-test.txt  open-fast-50-test.txt  open-mixed-60-test.txt  open-slow-50-test.txt  run-test.bat  steady-20231222-1125-test.txt
test/calibration/generic/: interval-5x100+500-646-test.txt
test/calibration/genericAir/: interval-200_2000_200-743-test.txt  steady2.0-real-730-test.txt  threshold-real-694-test.txt
test/calibration/kayakFirst/: closed-fast-100-test.txt  closed-slow-100-test.txt
test/calibration/kayakFirstBlue/: 4x500-double_stroke-1676-test.txt
test/calibration/kayakfirst/: closed-fast.txt  interval-(5'+30''+30'')x3-231123.txt  open-slow.txt
test/calibration/kayakfirstBlue/: closed-fast-100-test.txt
test/calibration/oldDanube/: 500_1000x3-sprint-2675-test.txt  6x500-sprint-2601-test.txt  8x30sec-sprint-2562-test.txt  champion-interval-1537-test.txt  fast-closed-100-test.txt  steady-20250816-2500-test.txt
test/e2e/: Arduino.h  ArduinoLog.cpp  ArduinoLog.h  CMakeLists.txt  NimBLEDevice.h  globals.cpp  globals.h  main.cpp  test.array.cpp
test/e2e/soc/: gpio_num.h  soc_caps.h
test/fixtures/: Arduino.h  ArduinoLog.h  Esp32-typedefs.h  FastLED.h  NimBLEDevice.h  Preferences.h
test/unit/: CMakeLists.txt  EEPROM.service.spec.cpp  bluetooth.chunked-notify-metrics.spec.cpp  bluetooth.control-point.spec.cpp  bluetooth.controller.spec.cpp  bluetooth.notifications.spec.cpp  bluetooth.ota-callback.spec.cpp  bluetooth.server-callbacks.spec.cpp  bluetooth.service.spec.cpp  flywheel.service.spec.cpp  globals.spec.cpp  led.service.spec.cpp  ols-linear-series.spec.cpp  ota-updater.service.spec.cpp  peripherals.controller.spec.cpp  power-manager.contorller.spec.cpp  power-manager.controller.spec.cpp  power-manager.service.spec.cpp  regression.test-cases.spec.h  sd-card.service.spec.cpp  series.spec.cpp  series.test-cases.spec.cpp  stroke.controller.spec.cpp  stroke.service.spec.cpp  stroke.service.spec.deltaTimes.txt  stroke.service.spec.dragFactor.txt  stroke.service.spec.forceCurves.txt  test-settings.h  test.settings.h  test.spec.cpp  ts-linear-series.spec.cpp  ts-quadratic-series.spec.cpp  weighted-average-series.spec.cpp
test/unit/bluetooth/: bluetooth.chunked-notify-metrics.spec.cpp  bluetooth.connection-manager.spec.cpp  bluetooth.control-point.spec.cpp  bluetooth.controller.spec.cpp  bluetooth.notifications.spec.cpp  bluetooth.ota-callback.spec.cpp  bluetooth.server-callbacks.spec.cpp  bluetooth.subscription-manager.spec.cpp
test/unit/bluetooth/ble-services/: base-metrics.service.spec.cpp  battery.service.spec.cpp  device-info.service.spec.cpp  ota.service.spec.cpp  (+3 more)
test/unit/include/: Arduino.cpp  Arduino.h  ArduinoLog.cpp  ArduinoLog.h  Esp32-typedefs.h  FastLED.cpp  FastLED.h  LittleFS.h  NimBLEDevice.cpp  NimBLEDevice.h  Preferences.h  SdFat.cpp  SdFat.h  Update.cpp  Update.h  catch_amalgamated.cpp  catch_amalgamated.hpp  esp_err.h  esp_mac.h  esp_ota_ops.cpp  esp_ota_ops.h  fakeit.hpp  globals.cpp  globals.h  led_strip.cpp  led_strip.h  test.board-profile.h  test.settings.h
test/unit/rower/: flywheel.service.spec.cpp  stroke.controller.spec.cpp  stroke.service.spec.cpp
test/unit/series/: cyclic-error-filter.spec.cpp  exponential-weighted-average.spec.cpp  ols-linear-series.spec.cpp  regression.test-cases.spec.h  series.spec.cpp  ts-linear-series.spec.cpp  ts-quadratic-series.spec.cpp  weighted-average-series.spec.cpp
test/unit/test-data/: stroke.service.spec.dragFactor.txt  stroke.service.spec.forceCurves.txt  stroke.service.spec.torque.txt
(+147 files in other folders)
